fix earned page alignment

--- a/src/app/page/earned-page/earned-page.component.scss
+++ b/src/app/page/earned-page/earned-page.component.scss
@@ -2,4 +2,6 @@
 
 .earned-page {
   @include layout-flex-column();
+  
+  width: 94vw;
 }
